update Edit emacs config keybind to properly reflect new config location.

--- a/emacs.org
+++ b/emacs.org
@@ -230,7 +230,7 @@ Elfeed-tube commands
 #+begin_src emacs-lisp
   (hd/leader-keys
     "." '(find-file :wk "Find file")
-    "f c" '((lambda () (interactive) (find-file "~/.config/emacs/config.org")) :wk "Edit emacs config")
+    "f c" '((lambda () (interactive) (find-file "~/dotfiles/emacs.org")) :wk "Edit emacs config")
     "f r" '(counsel-recentf :wk "Find recent files")
 #+end_src
 
