--- a/emacs/startup.org
+++ b/emacs/startup.org
@@ -6,7 +6,7 @@
 | M-x       | [[elisp:(counsel-M-x)][counsel-M-x]]         | Prompt for Emacs programs          |
 | SPC .     | [[elisp:(counsel-find-file)][counsel-find-file]]   | Find a file                        |
 | SPC f r   | [[elisp:(counsel-recentf)][counsel-recentf]]     | Find a Recent file                 |
-| SPC f c   | [[elisp:(find-file (concat (getenv "HOME") "/dotfiles/emacs/emacs.org"))][emacs.org]]           | Open Emacs Personal [[./emacs.org][config]]         |
+| SPC f c   | [[elisp:(find-file (concat (getenv "HOME") "/dotfiles/emacs/README.org"))][README.org]]          | Open Emacs Personal [[./emacs.org][config]]         |
 | SPC h r r | [[elisp:(doom/reload)][doom/reload]]         | Reload Emacs Config                |
 | SPC f u   | [[elisp:(doom/sudo-find-file nil)][doom/sudo-find-file]] | Find file and open as root         |
 | SPC f U   | /doom/sudo-this-file/ | Open current file as root          |
@@ -15,7 +15,7 @@
 
 * EMACS CONFIG FILES  [[file:./images/emacs-start-page-urgent.png]] 
 |---+--------------------------+--------------------------------------------------------|
-| =1= | [[elisp:(find-file (concat (getenv "HOME") "/dotfiles/emacs/emacs.org"))][config.org]]               | This is the main user configuration file for Emacs.    |
+| =1= | [[elisp:(find-file (concat (getenv "HOME") "/dotfiles/emacs/README.org"))][README.org]]               | This is the main user configuration file for Emacs.    |
 | =2= | [[elisp:(find-file (concat (getenv "HOME") "/.config/emacs/init.el"))][init.el]]                  | Emacs initializtion file.                              |
 | =3= | [[elisp:(find-file (concat (getenv "HOME") "/.config/emacs/themes/seize-the-night-theme.el"))][seize-the-night-theme.el]] | Custom theme for Emacs.                                |
 | =4= | [[elisp:(find-file (concat (getenv "HOME") "/.config/emacs/elfeed.org"))][elfeed.org]]               | Orgmode configuration file for Emacs Elfeed RSS reader |
