fixed SPC f c key combo

--- a/emacs/README.org
+++ b/emacs/README.org
@@ -231,7 +231,7 @@ Elfeed-tube commands
 #+begin_src emacs-lisp
   (hd/leader-keys
     "." '(find-file :wk "Find file")
-    "f c" '((lambda () (interactive) (find-file "~/dotfiles/emacs/emacs.org")) :wk "Edit emacs config")
+    "f c" '((lambda () (interactive) (find-file "~/dotfiles/emacs/README.org")) :wk "Edit emacs config")
     "f r" '(counsel-recentf :wk "Find recent files")
 #+end_src
 
