--- a/emacs/README.org
+++ b/emacs/README.org
@@ -1,4 +1,5 @@
 * TABLE OF CONTENTS :toc:noexport:
+- [[#about][ABOUT]]
 - [[#important-programs-to-load-first][IMPORTANT PROGRAMS TO LOAD FIRST]]
   - [[#elpacs-package-manager][Elpacs Package Manager]]
   - [[#evil-mode][Evil Mode]]
@@ -51,6 +52,14 @@
   - [[#initial-buffer-choice--options][Initial Buffer Choice & Options]]
 - [[#which-key][WHICH-KEY]]
 - [[#footnotes][FOOTNOTES]]
+
+* ABOUT
+This is my personal /GNU Emacs/ literate configuration. I will do my best to clarify what external dependencies are required for this emacs config. However, the external dependency list may not be complete, and I may have made other undocumented changes to my system. Therefor I would *NOT* recommend blindly copying this config. Instead, i would suggest reading though this config, and copying/reimplimenting only those sections which are reivant to your own personal emacs config.
+
+My personal emacs config has been inspired by many factors, and it would be to difficult to enumerate all such factors. Therefor, I will Instead list bellow what i have deemed to be the foundational influences to my personal emacs config.
+- [[https://github.com/doomemacs/doomemacs][DOOM Emacs]]
+- [[https://systemcrafters.net/emacs-from-scratch/][System Crafters: Emacs from Scratch]]
+- [[https://www.youtube.com/playlist?list=PL5--8gKSku15e8lXf7aLICFmAHQVo0KXX][DistroTube Cofiguring Emacs]]
 
 * IMPORTANT PROGRAMS TO LOAD FIRST
 ** Elpacs Package Manager
