fixed typo in waybar.org which prevented successful org-babel-tangle execution, and installed json-mode for better syntax highlighting

--- a/emacs/README.org
+++ b/emacs/README.org
@@ -1,5 +1,5 @@
 * TABLE OF CONTENTS :toc:noexport:
-- [[#about][ABOUT]]
+- [[#about-this-config][ABOUT THIS CONFIG]]
 - [[#important-programs-to-load-first][IMPORTANT PROGRAMS TO LOAD FIRST]]
   - [[#elpacs-package-manager][Elpacs Package Manager]]
   - [[#evil-mode][Evil Mode]]
@@ -53,7 +53,7 @@
 - [[#which-key][WHICH-KEY]]
 - [[#footnotes][FOOTNOTES]]
 
-* ABOUT
+* ABOUT THIS CONFIG
 This is my personal /GNU Emacs/ literate configuration. I will do my best to clarify what external dependencies are required for this emacs config. However, the external dependency list may not be complete, and I may have made other undocumented changes to my system. Therefor I would *NOT* recommend blindly copying this config. Instead, i would suggest reading though this config, and copying/reimplimenting only those sections which are reivant to your own personal emacs config.
 
 My personal emacs config has been inspired by many factors, and it would be to difficult to enumerate all such factors. Therefor, I will Instead list bellow what i have deemed to be the foundational influences to my personal emacs config.
@@ -587,6 +587,10 @@ Defining the various fonts that emacs will use
   (add-to-list 'default-frame-alist 
                '(font . "JetBrains Mono-11"))
   (setq-default line-spacing 0.12)
+#+end_src
+
+#+begin_src emacs-lisp
+(setq org-src-fontify-natively t)
 #+end_src
 ** Zooming In/Out
 You can use the bindings CTRL plus =/- for zooming in/out. You can also use CTRL plus the mouse wheel for zooming in/out.
